test/classes/errors/newValueNotType.compopts
--legacy-nilable-classes --ignore-errors-for-pass
